--- a/app/src/main/res/values/strings_tubotanka_tubotanka.xml
+++ b/app/src/main/res/values/strings_tubotanka_tubotanka.xml
@@ -4,4 +4,6 @@
     <string name="label_price_unit">万円</string>
     <string name="label_occupied_area">専有/延床面積</string>
     <string name="label_occupied_area_unit_m2">m2</string>
+    <string name="label_tubo_tanka">坪単価</string>
+    <string name="label_tubo_tanka_unit">万円/坪</string>
 </resources>
